@@ -21,7 +21,7 @@ simp_options::firewall : true
 simp_options::kerberos : false
 simp_options::stunnel : false
 simp_options::tcpwrappers : false
-simp_options::trusted_nets : ['ALL']
+simp_options::trusted_nets : ['ALL','0.0.0.0/0']
 
 ssh::server::conf::permitrootlogin : true
 ssh::server::conf::authorizedkeysfile : '.ssh/authorized_keys'
@@ -30,10 +30,9 @@ ssh::server::conf::authorizedkeysfile : '.ssh/authorized_keys'
 
 # These two need to be paired in our case since we expect to manage the Kerberos
 # infrastructure for our tests.
-nfs::secure_nfs : false
-nfs::is_server : #IS_SERVER#
+nfs::secure_nfs: false
+nfs::is_server: #IS_SERVER#
     EOM
-
   }
 
   context 'setup' do
